assets/prometheus-operator-user-workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: Expose the `/metrics` endpoint on port 8443. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: prometheus-operator-user-workload-tls
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/part-of: openshift-monitoring
    app.kubernetes.io/version: 0.94.0
  name: prometheus-operator
  namespace: openshift-user-workload-monitoring
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/part-of: openshift-monitoring
